oxiplate-derive/tests/broken/for/else-after-else.stderr
error: `else` previously present in this `for` statement; expected `endfor`
  --> tests/broken/for/else-after-else.rs:10:1
   |
10 | {% else %}
   | ^^^^^^^^^^

error: `else` previously present in this `for` statement; expected `endfor`
  --> tests/broken/for/else-after-else.rs:12:1
   |
12 | {% else %}
   | ^^^^^^^^^^

error: Unexpected 'else' statement
  --> tests/broken/for/else-after-else.rs:15:1
   |
15 | {% else %}"
   | ^^^^^^^^^^
